fixed issue with url and tickers

--- a/src/app/components/buttons/button-save-link/button-save-link.component.html
+++ b/src/app/components/buttons/button-save-link/button-save-link.component.html
@@ -1,7 +1,7 @@
 <div>
   <a
     pButton
-    href="{{ url() }}"
+    [href]="'/ticker/' + url()"
     [text]="true"
     [raised]="true"
     class="btn-border-right-none"
