--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -3,7 +3,7 @@
   <h1 class="p-text-primary">{{ data.results.name }}</h1>
   <app-button-save-link
     [text]="tickerName()"
-    [url]="'/' + tickerName()"
+    [url]="tickerName()"
   ></app-button-save-link>
 </header>
 }
