--- a/src/app/pages/stock/stock.component.css
+++ b/src/app/pages/stock/stock.component.css
@@ -47,3 +47,21 @@ main {
   grid-gap: 1rem;
   padding: 0 1rem;
 }
+
+.notFound-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+}
+
+.notFound-container-h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+
+.notFound-container-h2 {
+  font-size: 1.5rem;
+}
