dealt with error responses in stock

--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -4,13 +4,10 @@
   <h1 class="p-text-primary notFound-container-h1">Loading...</h1>
 </main>
 
-<!-- ticker not found -->
-} @if (tickerNotFoundError) {
+<!-- error -->
+} @if (errorMessage) {
 <main class="notFound-container">
-  <h1 class="p-text-primary notFound-container-h1">Ticker Not Found</h1>
-  <h2 class="p-text-secondary notFound-container-h2">
-    We're sorry, but the ticker {{ tickerName() }} couldn't be located.
-  </h2>
+  <h1 class="p-text-primary notFound-container-h1">{{ errorMessage }}</h1>
   <a routerLink="/" class="p-button font-bold">Return to Home</a>
 </main>
 }
@@ -81,10 +78,4 @@
   </div>
   }
 </main>
-} @else {
-<main class="notFound-container">
-  <h1 class="p-text-primary notFound-container-h1">An error occured</h1>
-  <a routerLink="/" class="p-button font-bold">Return to Home</a>
-</main>
-
 }
