--- a/src/app/pages/stock/stock.component.html
+++ b/src/app/pages/stock/stock.component.html
@@ -70,10 +70,9 @@
       }
     </div>
     <p class="p-text-secondary">
-      Having trouble finding your ticker? You can check out
+      Check out
       <a target="_blank" href="https://stockanalysis.com/stocks/">this link</a>
-      for a complete list of U.S. stocks. Please note, the website you're
-      viewing only displays U.S. stocks.
+      for a complete list of U.S. stocks.
     </p>
   </p-card>
   }
