--- a/src/app/pages/stock/stock.component.css
+++ b/src/app/pages/stock/stock.component.css
@@ -85,6 +85,10 @@ h1 {
     grid-row: 1 / 3; /* Spans from the first to the second row */
   }
 
+  :host ::ng-deep .chart-card > div {
+    height: 100%;
+  }
+
   .compare-card {
     grid-column: 2; /* Second column */
     grid-row: 1; /* First row */
