fixed the entire article feature with signals

--- a/src/app/components/thumbnail-article/thumbnail-article.component.html
+++ b/src/app/components/thumbnail-article/thumbnail-article.component.html
@@ -1,5 +1,8 @@
 <a class="card flex justify-content-center" href="{{ url() }}" target="_blank">
-  <p-card header="{{ title() }}" [style]="{ width: '360px' }">
+  <p-card
+    header="{{ title() }}"
+    [style]="{ width: '360px', marginTop: '1rem' }"
+  >
     <ng-template pTemplate="header">
       <div class="img-container">
         <img alt="Card" ngSrc="{{ imageUrl() }}" fill class="img" />
