replaced rxjs by signals for saved tickers

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<p-menubar [model]="items" [style]="{ border: 'none', borderRadius: '0' }"
+<p-menubar [model]="menuItems()" [style]="{ border: 'none', borderRadius: '0' }"
   ><ng-template pTemplate="start"
     ><div class="icon">
       <span class="text1">STOCK</span><span class="text2">LENS</span>
