change calculator to signals

--- a/src/app/components/calculator-result-table/calculator-result-table.component.html
+++ b/src/app/components/calculator-result-table/calculator-result-table.component.html
@@ -1,7 +1,7 @@
-@if (!calculatedDataInput) {
+@if (!calculatedDataInput()) {
 <p>Please, enter some values and press "Calculate"</p>
 } @else {
-<p-table [value]="calculatedDataInput">
+<p-table [value]="calculatedDataInput()!">
   <ng-template pTemplate="header">
     <tr>
       <th>Year</th>
